
package com.ecommerce.enumerator;

public enum Perfil {
    FUNCIONARIO,
    CLIENTE
}
