package com.ecommerce.enumerator;

public enum StatusPedido {
    PENDENTE,
    PROCESSANDO_PAGAMENTO,
    ENVIADO,
    ENTREGUE,
    CANCELADO
}
