package com.ecommerce.enumerator;

public enum TipoEndereco {
    COMERCIAL,
    RESIDENCIAL
}
