package com.ecommerce.enumerator;

public enum TipoPiano {
    ACUSTICO, DIGITAL, HIBRIDO;
}
